--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "cluster_host_config": {
     "ips": {
-        "pc_ip": "10.19.117.31",
-        "pe_ip": "10.15.252.100"
+        "pc_ip": "10.15.42.52",
+        "pe_ip": "10.15.41.62"
     },
     "host_driver": {
       "location": "provide either a tar path or http link",
@@ -31,11 +31,11 @@
       "nic_family": ""
     },
     "vlan_config": {
-      "vlan_id": 1117,
-      "ip": "10.19.117.0",
+      "vlan_id": 3300,
+      "ip": "10.15.43.0",
       "prefix_length": 24,
-      "default_gateway_ip": "10.19.117.1",
-      "pool_list_ranges": ["10.19.117.126 10.19.117.133"]
+      "default_gateway_ip": "10.15.43.1",
+      "pool_list_ranges": ["10.15.43.231 10.15.43.250"]
     }
   },
 
@@ -51,7 +51,7 @@
     },
     "vm_image": {
       "bind": true,
-      "vm_image_location": "data/image/vm_image.qcow2",
+      "vm_image_location": "data/image/rocky9-perf-v0.qcow2",
       "vm_image_name": "vm_image"
     },
     "firmware": {
