--- a/oem_config.json
+++ b/oem_config.json
@@ -1,7 +1,7 @@
 {
   "cluster_host_config": {
     "ips": {
-        "pe_ip": "10.15.251.71"
+        "pe_ip": "10.2.43.122"
     },
     "guest_vm_driver": {
       "use_driver_default": true,
@@ -16,12 +16,12 @@
     },
     "nic_config": {
       "bridge": "br0",
-      "port": "eth7",
-      "host_ip": "10.15.251.74",
+      "port": "eth4",
+      "host_ip": "10.2.43.172",
       "nic_family": ""
     },
     "vlan_config": {
-    "existing_vlan_name":"",
+    "existing_vlan_name":"vlan0",
     "vlan_id": 1117,
     "ip": "10.19.117.0",
     "prefix_length": 24,
@@ -38,7 +38,7 @@
     },
     "vm_image": {
       "bind": true,
-      "vm_image_location": "data/image/rocky-9.3.qcow2",
+      "vm_image_location": "http://uranus.corp.nutanix.com/~rama.pandey/rocky-9_4_with_nm_firewalld.qcow2",
       "vm_image_name": "vm_image"
     }
   }
