--- a/oem_config.json
+++ b/oem_config.json
@@ -11,15 +11,15 @@
     "vm_image": {
       "use_vm_default": true,
       "bind": false,
-      "uefi": true,
+      "uefi": false,
       "vm_image_location": 
       "http://10.52.128.2/images/ahv/rocky9.4-uefi.qcow2",
       "vm_image_name": "vm_image"
     },
     "nic_config": {
       "bridge": "br0",
-      "host_ip": "",
-      "port": "",
+      "host_ip": "10.2.43.172",
+      "port": "eth4",
       "host_ip_2":"",
       "port_2": "",
       "nic_family": ""
